@@ -1,3 +1,11 @@
+2007-03-10  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/mode_design/users/dialog_user.cc:
+	* glom/mode_design/users/dialog_user.h: Added check_password(), which warns about 
+	an empty password or a password confirmation failure.
+	* glom/mode_design/users/dialog_users_list.cc: When adding or editing a user, 
+	check the password, using check_password().
+
 1.3.12:
 
 2007-03-09  Murray Cumming  <murrayc@murrayc.com>
